--- a/future.html
+++ b/future.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <p> We plan to expand our work</p>
+  <p>Details related to what might be the work should be mentioned in detail</p>
 </body>
 </html>
