--- a/about.html
+++ b/about.html
@@ -4,5 +4,39 @@
 <body>
 <p>This is about us</p>
   <p>About should be long enough</p>
+      <div class="container">
+      <!--Grid row-->
+        <div class="row">
+
+          <!--Grid column-->
+          <div class="col-md-6 mb-4 mt-4">
+
+            <img src="img/food5.jpg" class="img-fluid z-depth-1-half"
+            alt="seedpic">
+
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-6 mb-4 mt-4" id="aboutus">
+
+            <!-- Main heading -->
+            <h3 class="h3 mb-3" >About FOODPOINT</h3>
+            <p>Established in the year
+              <strong>2021</strong>&nbsp;we aim at providing the best quality of food to to our valuable customers from topmost demanding resturants.</p>
+              <!-- Main heading -->
+
+              <hr>
+
+              <p>
+                We provide best quality of food to our customers and our delivery covers a wide range of area.
+                We function 24*7 so that you can order at any time and for any place. The resturants working with us are <strong>100% authentic</strong> and we provide best facility.
+              </p>
+
+              <!-- CTA -->
+
+
+            </div>
+            <!--Grid column-->
 </body>
 </html>
