--- a/phone.html
+++ b/phone.html
@@ -1,4 +1,37 @@
 <html>
 <p>contact me on my email</p>
   <p>Mention your email and contact number</p>
+    <!--Footer-->
+  <footer class="page-footer text-center font-small mt-4 wow fadeIn navbar-dark primary-color" id="contact">
+
+   
+    <hr class="my-4">
+
+    <!-- Social icons -->
+    <div class="pb-4">
+      <a href="#" target="_blank">
+        <i class="fab fa-facebook-f mr-3"></i>
+      </a>
+
+      <a href="" >
+        <i class="fab fa-twitter mr-3"></i>
+      </a>
+
+      <a href="https://youtube.com" target="_blank">
+        <i class="fab fa-youtube mr-3"></i>
+      </a>
+
+     
+    </div>
+    <!-- Social icons -->
+
+    <!--Copyright-->
+    <div class="footer-copyright py-3">
+      © 2021 Copyright:
+      <a href="" > FoodPoint</a>
+    </div>
+    <!--/.Copyright-->
+
+  </footer>
+  <!--/.Footer-->
 </html>
