--- a/about.html
+++ b/about.html
@@ -38,5 +38,40 @@
 
             </div>
             <!--Grid column-->
+           <nav class="navbar-expand-lg" style="background-color:  #e6f2ff !important;">
+   <a class="navbar-brand" href="#" style="margin-left: 140px;">
+    <img src="img/logo.png" alt="eazykleen logo" height="60">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarText">
+    <ul class="navbar-nav ml-auto" style="margin-right: 200px;">
+      <li class="nav-item active">
+        <a class="nav-link" href="#"  style="color: #19306b;"><strong>Home</strong>
+          <span class="sr-only">(current)</span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"  style="color: black;">About Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#"  style="color: black;">Products</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" style="color: black;">Partner with Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" style="color: black;">Contact Us</a>
+      </li>
+    </ul>
+
+    
+  </div>
+  
+  
+</nav>
+
 </body>
 </html>
